--- a/list.html
+++ b/list.html
@@ -1,62 +1,63 @@
-<ons-page id="list.html">
-    <ons-toolbar style="background: darkorange;">
-        <div class="left">
-          <ons-toolbar-button onclick="fn.open()">
-            <ons-icon icon="md-menu"></ons-icon>
-          </ons-toolbar-button>
-        </div>
-        <div class="center">
-          Restaurat List
-        </div>
-      </ons-toolbar>
+<ons-page id="list">
 
-      <ons-card onclick="reslist()">
-          <img src="img/cok2.jpg" width="100px" height="80px">
-            <h5>Mozza by Cotte</h5>
-        </ons-card>
-
-        <ons-card onclick="reslist()">
-            <img src="img/cok2.jpg" width="100px" height="80px">
-              <h5>Mozza by Cotte</h5>
-          </ons-card>
-
-          <ons-card onclick="reslist()">
-              <img src="img/cok2.jpg" width="100px" height="80px">
-                <h5>Mozza by Cotte</h5>
-            </ons-card>
-
-            <ons-card onclick="reslist()">
-                <img src="img/cok2.jpg" width="100px" height="80px">
-                  <h5>Mozza by Cotte</h5>
-              </ons-card>
-
-              <ons-card onclick="reslist()">
-                  <img src="img/cok2.jpg" width="100px" height="80px">
-                    <h5>Mozza by Cotte</h5>
-                </ons-card>
-
-                <ons-card onclick="reslist()">
-                    <img src="img/cok2.jpg" width="100px" height="80px">
-                      <h5>Mozza by Cotte</h5>
-                  </ons-card>
-
-                  <ons-card onclick="reslist()">
-                      <img src="img/cok2.jpg" width="100px" height="80px">
-                        <h5>Mozza by Cotte</h5>
-                    </ons-card>
-
-                    <ons-card onclick="reslist()">
-                        <img src="img/cok2.jpg" width="100px" height="80px">
-                          <h5>Mozza by Cotte</h5>
-                      </ons-card>
-
-                      <ons-card onclick="reslist()">
-                          <img src="img/cok2.jpg" width="100px" height="80px">
-                            <h5>Mozza by Cotte</h5>
+        <div style="text-align: center; margin-top: 5px;">
+                <ons-row>  
+                <ons-col>
+                        <ons-card>
+                            <img src="img/superthumb.png" width="125px" width="150px">
                         </ons-card>
+                    </ons-col>
+                </ons-row>
+          </div>
 
-                        <ons-card onclick="reslist()">
-                            <img src="img/cok2.jpg" width="100px" height="80px">
-                              <h5>Mozza by Cotte</h5>
-                          </ons-card>
+          <div style="text-align: center; margin-top: 5px;">
+                <ons-row>  
+                <ons-col>
+                        <ons-card>
+                            <img src="img/superthumb.png" width="125px" width="150px">
+                        </ons-card>
+                    </ons-col>
+                </ons-row>
+          </div>
+
+          <div style="text-align: center; margin-top: 5px;">
+                <ons-row>  
+                <ons-col>
+                        <ons-card>
+                            <img src="img/superthumb.png" width="125px" width="150px">
+                        </ons-card>
+                    </ons-col>
+                </ons-row>
+          </div>
+
+          <div style="text-align: center; margin-top: 5px;">
+                <ons-row>  
+                <ons-col>
+                        <ons-card>
+                            <img src="img/superthumb.png" width="125px" width="150px">
+                        </ons-card>
+                    </ons-col>
+                </ons-row>
+          </div>
+
+          <div style="text-align: center; margin-top: 5px;">
+                <ons-row>  
+                <ons-col>
+                        <ons-card>
+                            <img src="img/superthumb.png" width="125px" width="150px">
+                        </ons-card>
+                    </ons-col>
+                </ons-row>
+          </div>
+
+          <div style="text-align: center; margin-top: 5px;">
+                <ons-row>  
+                <ons-col>
+                        <ons-card>
+                            <img src="img/superthumb.png" width="125px" width="150px">
+                        </ons-card>
+                    </ons-col>
+                </ons-row>
+          </div>
+    
 </ons-page>
