--- a/login.html
+++ b/login.html
@@ -2,7 +2,10 @@
                   <ons-toolbar-button onclick="fn.open()">
                     <ons-icon icon="md-menu"></ons-icon>
 
-              <div style="text-align: center; margin-top: 100px;">      
+              <div style="text-align: center; margin-top: 100px;">
+                    <img src="img/logo-2400338_960_720.png" width="100px" height="100px">
+              </div>
+              <div style="text-align: center; margin-top: 10px;">
                     <p>
                             <ons-input id="username" modifier="underbar" placeholder="Username" float></ons-input>
                           </p>
@@ -12,5 +15,9 @@
                           <p style="margin-top: 30px;">
                             <ons-button onclick="login()">Sign in</ons-button>
                           </p>
+                          <p style="margin-top: 30px;">
+                                <ons-button onclick="login()">Sign up</ons-button>
+                              </p>
+                          
                           </div>
 </ons-page>
