--- a/category.html
+++ b/category.html
@@ -14,13 +14,13 @@
               <center><label class="checkbox">
                     <input type="checkbox" class="checkbox__input">
                     <div class="checkbox__checkmark"></div>
-                    OFF
+                    Delivery
                   </label>
                   
                   <label class="checkbox">
                     <input type="checkbox" class="checkbox__input" checked="checked">
                     <div class="checkbox__checkmark"></div>
-                    ON
+                    Pickup
                   </label></center>
                 </div>
 
