--- a/category.html
+++ b/category.html
@@ -28,7 +28,7 @@
                 <ons-row>
                   <ons-col>
                       <ons-card>
-                          <img src="img/superthumb.png" alt="Onsen UI" style="width: 100%">
+                          <img src="https://firebasestorage.googleapis.com/v0/b/foodpj-9550d.appspot.com/o/thumb1.png?alt=media&token=6068a6e6-68cd-44c0-b74a-cf1a4fbcfc70" alt="Onsen UI" style="width: 100%" onclick="photo()">
                       </ons-card>
                   </ons-col>
                 </ons-row>
