--- a/list.html
+++ b/list.html
@@ -1,10 +1,16 @@
 <ons-page id="list">
 
+        <ons-toolbar style="background: darkorange;">
+                <div class="center">
+                  Category
+                </div>
+              </ons-toolbar>
+
         <div style="text-align: center; margin-top: 5px;">
                 <ons-row>  
                 <ons-col>
                         <ons-card>
-                            <img src="img/superthumb.png" width="125px" width="150px">
+                            <img src="img/superthumb.png" width="125px" width="150px" onclick="photo1()">
                         </ons-card>
                     </ons-col>
                 </ons-row>
