--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
-  <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
-  <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
+  <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
+  <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
+  
+  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-auth.js"></script>
   <script src="lib/onsen/js/onsenui.js"></script>
+  <script src="lib/jquery/jquery-3.4.1.min.js"></script>
   <script src="js/app.js"></script>
+
+
 </head>
 <body>
-            <ons-splitter>
+    <ons-navigator swipeable id="myNavigator" page="split.html"></ons-navigator>
+    <template id="split.html">
+      <ons-page>
+            <ons-splitter id="mysplitter">
                     <ons-splitter-side id="menu" side="left" width="220px" collapse swipeable>
                       <ons-page id="index">
                         <ons-list>
@@ -26,6 +37,8 @@
                     </ons-splitter-side>
                     <ons-splitter-content id="content" page="category.html"></ons-splitter-content>
                   </ons-splitter>
+      </ons-page>
+    </template>
 </body>
 
 </html>
