--- a/index.html
+++ b/index.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Food 247</title>
+
   <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
   <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
-  
-  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-auth.js"></script>
-  <script src="lib/onsen/js/onsenui.js"></script>
-  <script src="lib/jquery/jquery-3.4.1.min.js"></script>
-  <script src="js/app.js"></script>
-
+  <link rel="stylesheet" href="css/app.css">
+  <!-- CODELAB: Add link rel manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <script>
+    // CODELAB: Register service worker.
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+        .then((reg) => {
+          console.log('Service worker registered.', reg);
+        });
+  });
+}
+  </script>
 
 </head>
+
 <body>
-    <ons-navigator swipeable id="myNavigator" page="split.html"></ons-navigator>
-    <template id="split.html">
-      <ons-page>
-            <ons-splitter id="mysplitter">
-                    <ons-splitter-side id="menu" side="left" width="220px" collapse swipeable>
-                      <ons-page id="index">
-                        <ons-list>
-                          <ons-list-item onclick="fn.load('category.html')" tappable>
-                            Category
-                          </ons-list-item>
-                          <ons-list-item onclick="fn.load('order.html')" tappable>
-                            Order
-                          </ons-list-item>
-                          <ons-list-item onclick="fn.load('login.html')" tappable>
-                            SignIn
-                          </ons-list-item>
-                        </ons-list>
-                      </ons-page>
-                    </ons-splitter-side>
-                    <ons-splitter-content id="content" page="category.html"></ons-splitter-content>
-                  </ons-splitter>
-      </ons-page>
-    </template>
+
+  <!-- First navigation component: Navigator. This will remain always on top of the app. -->
+  <ons-navigator id="myNavigator" page="splitter.html">
+  </ons-navigator>
+
+
+  <!-- Second navigation component: Splitter. This will disappear if the first component changes its content. -->
+  <template id="splitter.html">
+    <ons-page>
+      <ons-splitter id="mySplitter">
+        <ons-splitter-side id="sidemenu" page="menu.html" swipeable width="250px" collapse swipe-target-width="50px">
+        </ons-splitter-side>
+        <ons-splitter-content page="home.html" id="content">
+        </ons-splitter-content>
+      </ons-splitter>
+    </ons-page>
+  </template>
+
+  <script src="lib/onsen/js/onsenui.js"></script>
+  <script src="lib/jquery/jquery-3.4.1.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-firestore.js"></script>
+  <script src="js/app.js"></script>
+
 </body>
 
 </html>
